--- a/chess/styles.css
+++ b/chess/styles.css
@@ -3,28 +3,6 @@ body {
     margin-top: 20px;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    margin-bottom: 20px;
-}
-
-.login-button {
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.login-button:hover {
-    background-color: #45a049;
-}
-
 #board {
     width: 400px;
     height: 400px;
@@ -33,4 +11,46 @@ body {
 
 #status {
     margin: 20px;
+}
+
+.chess-board {
+    width: 400px;
+    height: 400px;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    border: 2px solid #333;
+}
+
+.chess-board .square {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chess-board .white {
+    background-color: #f0d9b5;
+}
+
+.chess-board .black {
+    background-color: #b58863;
+}
+
+.piece {
+    font-size: 40px;
+    line-height: 1;
+    cursor: pointer;
+    user-select: none;
+}
+
+.white-piece {
+    color: white;
+    text-shadow: 1px 1px 2px #000;
+}
+
+.black-piece {
+    color: black;
+    text-shadow: 1px 1px 2px #fff;
 }
